cmake_minimum_required(VERSION 3.17)
project(RWA3_Group7)

set(CMAKE_CXX_STANDARD 17)

add_executable(RWA3_Group7 main.cpp LandBasedRobot/landbasedrobot.cpp LandBasedRobot/landbasedrobot.h LandBasedTracked/landbasedtracked.cpp LandBasedTracked/landbasedtracked.h LandBasedWheeled/landbasedwheeled.cpp LandBasedWheeled/landbasedwheeled.h)